; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/common/extr_sharpsl_param.c_sharpsl_save_param.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/common/extr_sharpsl_param.c_sharpsl_save_param.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i32, i64, i32, i64, i32*, i64, i32, i64, i32 }

@sharpsl_param = common dso_local global %struct.TYPE_3__ zeroinitializer, align 8
@PARAM_BASE = common dso_local global i64 0, align 8
@COMADJ_MAGIC = common dso_local global i64 0, align 8
@PHAD_MAGIC = common dso_local global i64 0, align 8
@UUID_MAGIC = common dso_local global i64 0, align 8
@TOUCH_MAGIC = common dso_local global i64 0, align 8
@AD_MAGIC = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sharpsl_save_param() #0 {
  %1 = load i64, i64* @PARAM_BASE, align 8
  %2 = inttoptr i64 %1 to i8*
  %3 = call i32 @memcpy(%struct.TYPE_3__* @sharpsl_param, i8* %2, i32 4)
  %4 = load i64, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @sharpsl_param, i32 0, i32 0), align 8
  %5 = load i64, i64* @COMADJ_MAGIC, align 8
  %6 = icmp ne i64 %4, %5
  br i1 %6, label %7, label %8

7:                                                ; preds = %0
  store i32 -1, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @sharpsl_param, i32 0, i32 1), align 8
  br label %8

8:                                                ; preds = %7, %0
  %9 = load i64, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @sharpsl_param, i32 0, i32 2), align 8
  %10 = load i64, i64* @PHAD_MAGIC, align 8
  %11 = icmp ne i64 %9, %10
  br i1 %11, label %12, label %13

12:                                               ; preds = %8
  store i32 -1, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @sharpsl_param, i32 0, i32 3), align 8
  br label %13

13:                                               ; preds = %12, %8
  %14 = load i64, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @sharpsl_param, i32 0, i32 4), align 8
  %15 = load i64, i64* @UUID_MAGIC, align 8
  %16 = icmp ne i64 %14, %15
  br i1 %16, label %17, label %20

17:                                               ; preds = %13
  %18 = load i32*, i32** getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @sharpsl_param, i32 0, i32 5), align 8
  %19 = getelementptr inbounds i32, i32* %18, i64 0
  store i32 -1, i32* %19, align 4
  br label %20

20:                                               ; preds = %17, %13
  %21 = load i64, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @sharpsl_param, i32 0, i32 6), align 8
  %22 = load i64, i64* @TOUCH_MAGIC, align 8
  %23 = icmp ne i64 %21, %22
  br i1 %23, label %24, label %25

24:                                               ; preds = %20
  store i32 -1, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @sharpsl_param, i32 0, i32 7), align 8
  br label %25

25:                                               ; preds = %24, %20
  %26 = load i64, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @sharpsl_param, i32 0, i32 8), align 8
  %27 = load i64, i64* @AD_MAGIC, align 8
  %28 = icmp ne i64 %26, %27
  br i1 %28, label %29, label %30

29:                                               ; preds = %25
  store i32 -1, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @sharpsl_param, i32 0, i32 9), align 8
  br label %30

30:                                               ; preds = %29, %25
  ret void
}

declare dso_local i32 @memcpy(%struct.TYPE_3__*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
